fixed issue with scrollbar appearing in the middle of cart in empty state

--- a/src/components/CartDropdown/CartDropdown.style.sass
+++ b/src/components/CartDropdown/CartDropdown.style.sass
@@ -19,6 +19,6 @@
         height: 240px
         display: flex
         flex-direction: column
-        overflow: scroll
+        overflow: auto
     button
         margin-top: auto
